fixed bottom icon alignment

--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -56,7 +56,7 @@
         height: 30px;
         position: absolute;
         cursor: pointer;
-        bottom: 13px;
+        bottom: 17px;
         --lr-offset: 8px;
       }
 
